# loop-interview-follow-up

./: .gitignore  README.md  pyproject.toml
python/src/domain/: order.py  product.py
python/src/use_case/: order_approval_use_case.py  order_creation_use_case.py  order_shipment_use_case.py
python/test/doubles/: test_order_repository.py  test_shipment_service.py
