[tool.poetry]
name = "loop technical - coding exercise final"
version = "0.1.0"
description = ""
authors = ["Max Buck <maxbuckdeveloper@gmail.com>"]
readme = "README.md"
packages = [{include = "python"}]

[tool.poetry.dependencies]
python = "3.13.2"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
